# core

./: index.js  package.json
libraries/rust/: Cargo.toml
libraries/rust/src/: lib.rs
machines/concatenator/: Cargo.toml  build.sh
machines/concatenator/src/: lib.rs
machines/hasher/: Cargo.toml  build.sh
machines/hasher/src/: lib.rs
test/: all.js
test/helpers/: create.js
test/machines/: concatenator.wasm  hasher.wasm
