[package]
name = "hasher"
version = "0.1.0"
authors = ["Andrew Osheroff <andrewosh@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
hypermachines_sys = { path = "../../../runtime/libraries/rust" }
hypermachines = { path = "../../libraries/rust" }
serde = "1.0.116"
serde_derive = "1.0.116"
serde_cbor = "0.11.1"
serde_bytes = "0.11.5"
blake2 = "0.9"
